<resources>
    <string name="app_name">EzItineraries</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_trip_plans">Planes de viaje</string>
    <string name="title_itineraries">Itinerarios</string>
    <string name="title_suggest_attractions">Sugerir atracción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_no_trip_plans">Aún no existen planes de viaje</string>
    <string name="label_no_itineraries">Aún no existen itinerarios calculados, para generar uno seleccione  uno de sus planes de viaje</string>
    <string name="input_trip_date">Fecha (*)</string>
    <string name="input_trip_name">Nombre del viaje (*)</string>
    <string name="input_trip_description">Descripción</string>
    <string name="label_distance_KM">Restricción para generación de itinerarios (*)</string>
    <string name="input_distance_km">Distancia máxima en KM</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_preferences_message">Ingrese los pesos de importancia para cada categoría de atracción turística. La suma de todos los pesos debe ser igual a 100.</string>
    <string name="input_preference_history">Historia</string>
    <string name="input_preference_religion">Religión</string>
    <string name="input_preference_nature">Naturaleza</string>
    <string name="input_preference_art">Arte</string>
    <string name="label_destination">Destino</string>
    <string name="label_date">Fecha</string>
    <string name="label_calculated_distancec">Distancia calculada</string>
    <string name="label_score">Puntaje</string>
    <string name="label_max_distance">Distancia máxima en KM</string>
    <string name="title_activity_trip_plan_atractions">Atracciones turísticas</string>
    <string name="save_new_plan">Guardar plan de viaje</string>
    <string name="label_trip_name">Nombre del viaje</string>
    <string name="label_trip_description">Descripción</string>
    <string name="title_see_itineraries_details">Visualizar</string>
    <string name="title_delete_itineraries">Eliminar</string>
    <string name="title_see_trip_plan_details">Visualizar</string>
    <string name="title_generate_itinerarie_proposal">Generar propuesta de itinerario</string>
    <string name="title_delete_trip_plan">Eliminar</string>
    <string name="generic_500_error">Ocurrió un error al procesar la solicitud</string>
    <string name="message_loading_trip_plans">Cargando planes de viaje...</string>
    <string name="label_country">País (*)</string>
    <string name="label_city">Ciudad (*)</string>
    <string name="empty_inputs_error">Debe llenar los campos requeridos (*)</string>
    <string name="message_loading_categories">Cargando categorías...</string>
    <string name="message_invalid_weights">Peso inválido ingresado</string>
    <string name="message_saving_trip_plan">Guardando...</string>
    <string name="message_saving_trip_plan_successful">Plan de viaje guardado exitosamente</string>
    <string name="save_new_itinerarie">Guardar itinerario calculado</string>
    <string name="message_saving_itinerary_successful">Guardado exitoso</string>
    <string name="message_saving_itinerary">Guardando itinerario...</string>
    <string name="message_creating_itinerary">Creando propuesta...</string>
    <string name="message_sending_suggestion">Enviando sugerencia...</string>
    <string name="button_send">Enviar</string>
    <string name="search_attraction_button">Buscar atracción</string>
    <string name="selected_place_label">Attracción turística seleccionada</string>
    <string name="category_label">Categoría</string>
    <string name="city_label">Ciudad</string>
    <string name="country_label">País</string>
    <string name="message_incomplete_suggestion">Datos de la nueva sugerencia incompletos</string>
    <string name="title_activity_itinerary_route">Ruta propuesta</string>
    <string name="title_activity_itinerary_preferences">Preferencias utilizadas</string>
    <string name="title_activity_itinerary_detail">Itinerario</string>
    <string name="title_activity_saved_preferences">Preferencias turísticas</string>
    <string name="title_activity_preferences_configuration">Preferencias turísticas</string>
    <string name="title_fragment_itineraries">Itinerarios calculados</string>
    <string name="title_fragment_suggestion">Sugerir atracción</string>
    <string name="title_fragment_trip_plans">Mis planes de viaje</string>
    <string name="label_additional_information">Información adicional</string>
    <string name="placeholder_itinerary_title">Itinerario de %s</string>
    <string name="placeholder_trip_plan_title">Plan de viaje a %s</string>
</resources>
