<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.ItineraryDetailActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_earth_grey600_48dp"/>
    <TextView
        android:id="@+id/textView_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/image_destination"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text=""/>
    <TextView
        android:id="@+id/textView_destination_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_destination"
        app:layout_constraintLeft_toRightOf="@id/image_destination"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_destination"/>
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_destination"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_calendar_grey600_48dp"/>
    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_destination"
        app:layout_constraintLeft_toRightOf="@id/image_date"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text=""/>
    <TextView
        android:id="@+id/textView_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_date"
        app:layout_constraintLeft_toRightOf="@id/image_date"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_date"/>
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_caculated_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_date"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_map_marker_distance_grey600_48dp"/>
    <TextView
        android:id="@+id/textView_calculated_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_date"
        app:layout_constraintLeft_toRightOf="@id/image_caculated_distance"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text=""/>
    <TextView
        android:id="@+id/textView_calculated_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_calculated_distance"
        app:layout_constraintLeft_toRightOf="@id/image_caculated_distance"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_calculated_distancec"/>
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_caculated_distance"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_bullseye_arrow_grey600_48dp"/>
    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_caculated_distance"
        app:layout_constraintLeft_toRightOf="@id/image_score"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text=""/>
    <TextView
        android:id="@+id/textView_calculated_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_score"
        app:layout_constraintLeft_toRightOf="@id/image_score"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_score"/>
    <TextView
        android:id="@+id/textView_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_score"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/label_distance_KM"/>
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_distance_restriction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_distance"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_map_marker_distance_grey600_48dp"/>
    <TextView
        android:id="@+id/textView_max_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_distance"
        app:layout_constraintLeft_toRightOf="@id/image_distance_restriction"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text=""/>
    <TextView
        android:id="@+id/textView_calculated_max_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_max_distance"
        app:layout_constraintLeft_toRightOf="@id/image_distance_restriction"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="8dp"
        android:text="@string/label_max_distance"/>
    <Button
        android:id="@+id/button_next_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:theme="@style/PrimaryFlatButton"
        android:text="@string/btn_next"/>

</android.support.constraint.ConstraintLayout>